force-app/main/default/objects/Mouse_Strain__c/Mouse_Strain__c.object-meta.xml
<CustomObject>
    <label>Mouse Strain</label>
    <nameField>
        <label>Mouse Strain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mice Strains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>