force-app/main/default/objects/Mouse_Strain__c/fields/maintenanceAndBreeding__c.field-meta.xml
<CustomField>
    <fullName>maintenanceAndBreeding__c</fullName>
    <label>Maintenance And Breeding</label>
    <type>TextArea</type>
</CustomField>