force-app/main/default/objects/Mouse_Strain__c/fields/Mouse_Gen_Cross_Other__c.field-meta.xml
<CustomField>
    <fullName>Mouse_Gen_Cross_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mouse Gen Cross Other</label>
    <type>Checkbox</type>
</CustomField>