force-app/main/default/objects/Mouse_Strain__c/fields/Mouse_Strain_Gen_Details__c.field-meta.xml
<CustomField>
    <fullName>Mouse_Strain_Gen_Details__c</fullName>
    <label>Mouse Strain Gen Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>